# dotfiles

./: .Rprofile  .Xresources  .bashrc  .gitconfig  .gmrunrc  .hgrc  .tmux.conf  .vimrc  README.md  bootstrap  complete_copy.txt  complete_link.txt  compton.conf  install  install.lst  slim.conf  tint2rc  tint2rc_arch
conky/: .conkyrc  .conkyrc_large  .conkyrc_light_laptop  .conkyrc_light_pc  .conkyrc_little_whitey  .conkyrc_netbook  .conkyrc_rings
conky/scripts/: rings-v1.2.1.lua
openbox/: autostart  rc.xml  rc_crunch.xml
psmouse-elantech-v7right/: README.md  dkms.conf
psmouse-elantech-v7right/src/: Makefile  elantech.c  psmouse-base.c
scripts/: CMakeLists.txt  colors2  knit
themes/openbox/Mistral/openbox-3/: themerc
